[package]
name = "nostreq"
description = "Nostr relay event request generator"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/blakejakopovic/nostreq"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["nostr", "nostr-protocol", "json", "cli"]

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
clap = "4.0.26"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
